# TrainingRoomSelect.gd
# è¨“ç·´å®¤é¸æ“‡ç•Œé¢ - é¡¯ç¤ºæ‰€æœ‰å¯ç”¨çš„è¨“ç·´å®¤
extends Control

# ==================== ç¯€é»å¼•ç”¨ ====================
@onready var back_button = $MarginContainer/VBoxContainer/TopBar/BackButton
@onready var room_list = $MarginContainer/VBoxContainer/ScrollContainer/RoomList

# ==================== æ•¸æ“š ====================
var training_rooms: Array = []

# ==================== åˆå§‹åŒ– ====================
func _ready():
	back_button.pressed.connect(_on_back_pressed)
	load_training_rooms()
	update_ui()

	# ğŸ¯ é€šçŸ¥ä»»å‹™ç³»çµ±ï¼šé€²å…¥è¨“ç·´é¸æ“‡ç•Œé¢
	TaskManager.notify_event("scene_entered", {"scene_name": "training_select"})

# ==================== æ•¸æ“šè¼‰å…¥ ====================
func load_training_rooms():
	"""å¾ JSON è¼‰å…¥è¨“ç·´å®¤é…ç½®"""
	var file_path = "res://data/config/training_rooms.json"
	print("ğŸ“‚ æ­£åœ¨è¼‰å…¥è¨“ç·´å®¤é…ç½®: %s" % file_path)

	if not FileAccess.file_exists(file_path):
		push_error("âŒ æ‰¾ä¸åˆ°è¨“ç·´å®¤é…ç½®æ–‡ä»¶: " + file_path)
		return

	var file = FileAccess.open(file_path, FileAccess.READ)
	if file == null:
		push_error("âŒ ç„¡æ³•æ‰“é–‹è¨“ç·´å®¤é…ç½®æ–‡ä»¶")
		return

	var json_text = file.get_as_text()
	file.close()

	var json = JSON.new()
	var error = json.parse(json_text)

	if error != OK:
		push_error("âŒ JSON è§£æéŒ¯èª¤: " + json.get_error_message())
		return

	var data = json.get_data()
	training_rooms = data.get("training_rooms", [])
	print("âœ… æˆåŠŸè¼‰å…¥ %d å€‹è¨“ç·´å®¤" % training_rooms.size())

# ==================== UI æ›´æ–° ====================
func update_ui():
	"""æ›´æ–°ç•Œé¢"""
	print("ğŸ¨ é–‹å§‹æ›´æ–°è¨“ç·´å®¤åˆ—è¡¨...")

	# æ¸…ç©ºç¾æœ‰æŒ‰éˆ•
	for child in room_list.get_children():
		child.queue_free()

	# å‰µå»ºè¨“ç·´å®¤æŒ‰éˆ•
	for room in training_rooms:
		create_room_button(room)
	print("âœ… UI æ›´æ–°å®Œæˆ")

func create_room_button(room_data: Dictionary):
	"""å‰µå»ºè¨“ç·´å®¤æŒ‰éˆ•"""
	var room_id = room_data.get("room_id", "")
	var room_name = room_data.get("room_name", "æœªå‘½å")
	var room_desc = room_data.get("room_desc", "")
	var room_icon = room_data.get("room_icon", "ğŸ“š")
	var training_time = room_data.get("training_time", 30)
	var exp_reward = room_data.get("exp_reward", 100)
	var max_teams = room_data.get("max_teams", 1)
	var unlock_conditions = room_data.get("unlock_conditions", {})
	var is_unlocked_by_default = room_data.get("is_unlocked_by_default", false)

	# æª¢æŸ¥æ˜¯å¦è§£é–
	var is_unlocked = check_room_unlocked(room_id, unlock_conditions, is_unlocked_by_default)

	# å‰µå»ºæŒ‰éˆ•å®¹å™¨
	var button_container = PanelContainer.new()
	button_container.name = "training_room_" + room_id  # ç¯€é»åç¨±ï¼ˆç­–ç•¥3ï¼‰
	button_container.custom_minimum_size = Vector2(0, 150)

	# âœ… è¨­ç½®å…ƒæ•¸æ“šä»¥ä¾¿ä»»å‹™ç³»çµ±æ™ºèƒ½æŸ¥æ‰¾ï¼ˆç­–ç•¥1 - æœ€é«˜å„ªå…ˆç´šï¼‰
	button_container.set_meta("highlight_id", "training_room_" + room_id)

	var button = Button.new()
	button.name = "RoomButton"
	button.custom_minimum_size = Vector2(0, 150)
	#button.disabled = !is_unlocked

	# çµ„è£æŒ‰éˆ•æ–‡å­—
	var status_text = ""
	if not is_unlocked:
		status_text = " ğŸ”’ æœªè§£é–(é»æ“Šè§£é–)"
		var unlock_text = get_unlock_text(unlock_conditions)
		if unlock_text != "":
			status_text += "\n" + unlock_text

	var button_text = "%s %s%s\n%s\n" % [room_icon, room_name, status_text, room_desc]
	button_text += "â±ï¸ è¨“ç·´æ™‚é–“: %dç§’  |  âœ¨ ç¶“é©—å€¼: %d  |  ğŸ‘¥ åŒæ™‚è¨“ç·´: %déšŠ" % [training_time, exp_reward, max_teams]

	button.text = button_text
	button.add_theme_font_size_override("font_size", 20)

	# ç¶å®šä¿¡è™Ÿ
	if is_unlocked:
		button.pressed.connect(_on_room_pressed.bind(room_data))
	else:
		button.modulate = Color(0.6, 0.6, 0.6)
		button.pressed.connect(_on_locked_room_pressed.bind(room_data))

	button_container.add_child(button)
	room_list.add_child(button_container)

func check_room_unlocked(room_id: String, unlock_conditions: Dictionary, is_unlocked_by_default: bool) -> bool:
	"""æª¢æŸ¥è¨“ç·´å®¤æ˜¯å¦è§£é–"""
	# æª¢æŸ¥ç©å®¶æ•¸æ“šä¸­æ˜¯å¦å·²è§£é–
	if PlayerDataManager.is_training_room_unlocked(room_id):
		return true

	# é»˜èªè§£é–çš„è¨“ç·´å®¤
	if is_unlocked_by_default:
		return true

	var unlock_type = unlock_conditions.get("type", "default")

	match unlock_type:
		"default":
			return true
		"stage":
			var required_stage = unlock_conditions.get("required_stage", "")
			if required_stage != "":
				return PlayerDataManager.is_stage_completed(required_stage)
			return false
		_:
			# é‡‘å¹£å’Œé‘½çŸ³è§£é–éœ€è¦ç©å®¶æ‰‹å‹•è§£é–
			return false

func get_unlock_text(unlock_conditions: Dictionary) -> String:
	"""ç²å–è§£é–æ¢ä»¶æ–‡å­—"""
	var unlock_type = unlock_conditions.get("type", "default")

	match unlock_type:
		"gold":
			var cost = unlock_conditions.get("cost_gold", 0)
			return "éœ€è¦: %d é‡‘å¹£è§£é–" % cost
		"diamond":
			var cost = unlock_conditions.get("cost_diamond", 0)
			return "éœ€è¦: %d é‘½çŸ³è§£é–" % cost
		"stage":
			var required_stage = unlock_conditions.get("required_stage", "")
			return "éœ€è¦å®Œæˆé—œå¡: %s" % required_stage
		_:
			return ""

# ==================== è¼¸å…¥è™•ç† ====================

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		_on_back_pressed()

# ==================== æŒ‰éˆ•å›èª¿ ====================
func _on_back_pressed():
	"""è¿”å›ä¸»é¸å–®"""
	print("ğŸ”™ è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()

func _on_room_pressed(room_data: Dictionary):
	"""è¨“ç·´å®¤è¢«é»æ“Šï¼ˆå·²è§£é–ï¼‰"""
	var room_id = room_data.get("room_id", "")
	var room_name = room_data.get("room_name", "")

	print("ğŸ“– é€²å…¥è¨“ç·´å®¤: %s (%s)" % [room_name, room_id])

	# è·³è½‰åˆ°è¨“ç·´ç•Œé¢
	GameManager.goto_training(room_data)

func _on_locked_room_pressed(room_data: Dictionary):
	"""é»æ“Šäº†æœªè§£é–çš„è¨“ç·´å®¤"""
	var unlock_conditions = room_data.get("unlock_conditions", {})
	var unlock_type = unlock_conditions.get("type", "default")

	match unlock_type:
		"gold":
			var cost = unlock_conditions.get("cost_gold", 0)
			show_unlock_confirm_dialog(room_data, "é‡‘å¹£", cost)
		"diamond":
			var cost = unlock_conditions.get("cost_diamond", 0)
			show_unlock_confirm_dialog(room_data, "é‘½çŸ³", cost)
		_:
			GameManager.show_message("æœªè§£é–", get_unlock_text(unlock_conditions))

func show_unlock_confirm_dialog(room_data: Dictionary, currency_type: String, cost: int):
	"""é¡¯ç¤ºè§£é–ç¢ºèªå°è©±æ¡†"""
	var room_id = room_data.get("room_id", "")
	var room_name = room_data.get("room_name", "")
	var unlock_conditions = room_data.get("unlock_conditions", {})

	# è¼‰å…¥è‡ªå®šç¾©å°è©±æ¡†
	var CustomDialog = load("res://scripts/ui/CustomDialog.gd")
	var dialog = CustomDialog.new()

	# ç²å–ç•¶å‰è²¨å¹£
	var current_currency = PlayerDataManager.get_gold() if currency_type == "é‡‘å¹£" else PlayerDataManager.get_diamond()
	var message = "æ˜¯å¦èŠ±è²» %d %s è§£é– %sï¼Ÿ\n\nç•¶å‰%s: %d" % [cost, currency_type, room_name, currency_type, current_currency]

	# è¨­ç½®å°è©±æ¡†
	var buttons = [
		{"text": "å–æ¶ˆ", "action": "cancel"},
		{"text": "ç¢ºèªè§£é–", "action": "unlock"}
	]
	dialog.setup_choice_dialog("è§£é–è¨“ç·´å®¤", message, buttons)

	# é€£æ¥ä¿¡è™Ÿ
	dialog.button_pressed.connect(func(action):
		if action == "unlock":
			# å˜—è©¦è§£é–
			var cost_gold = unlock_conditions.get("cost_gold", 0) if currency_type == "é‡‘å¹£" else 0
			var cost_diamond = unlock_conditions.get("cost_diamond", 0) if currency_type == "é‘½çŸ³" else 0

			if PlayerDataManager.unlock_training_room(room_id, cost_gold, cost_diamond):
				# è§£é–æˆåŠŸï¼Œåˆ·æ–°UI
				await get_tree().create_timer(0.1).timeout
				GameManager.show_message("è§£é–æˆåŠŸ", "æˆåŠŸè§£é– %sï¼" % room_name)
				update_ui()
			else:
				# è§£é–å¤±æ•—
				await get_tree().create_timer(0.1).timeout
				GameManager.show_message("è§£é–å¤±æ•—", "%sä¸è¶³ï¼" % currency_type)
	)

	# é¡¯ç¤ºå°è©±æ¡†
	get_tree().root.add_child(dialog)
	dialog.show_dialog()
